sftp: Fix detection of empty permissions

Commit 04e710b6e5674fe39d314c20c31b956298a918c8 removed the check for
mode < 0, but that is exactly what is fed to ::copy() and ::put() by
their callers.

Re-add the check and make the mode variable an int so a negative
value doesn't get lost.

BUG: 498888