sftp/kio_sftp.cpp
@@ -216,8 +216,11 @@ void log_callback(int priority, const char *function, const char *buffer, void *
     worker->log_callback(priority, function, buffer, userdata);
 }
 
-inline std::optional<perms> posixToOptionalPerms(uint32_t mode) noexcept
+inline std::optional<perms> posixToOptionalPerms(int mode) noexcept
 {
+    if (mode < 0) {
+        return {};
+    }
     return static_cast<perms>(mode) & perms::mask;
 }
 
